# yunxi-rust

./: .editorconfig  .gitignore  .mcp.json  CLAUDE.md  IMPLEMENTATION_PHASES.md  LICENSE  LOCAL_SETUP.md  PARITY.md  README.md  YUNXI.md  architecture-philosophy.md  pyproject.toml  requirements.txt  test_path.rs
rust/: .gitignore  Cargo.toml  README.md  TUI-DEVELOPMENT-LOG.md  TUI-ENHANCEMENT-PLAN.md  YUNPAT_MODULE_ANALYSIS.md  YUNXI.md  deny.toml  rustfmt.toml
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  error.rs  lib.rs  sse.rs  types.rs
rust/crates/api/tests/: client_integration.rs
rust/crates/commands/: Cargo.toml
rust/crates/commands/src/: custom_slash.rs  error.rs  lib.rs  slash_registry.rs
rust/crates/commands/src/intent/: matching.rs  mod.rs  parser.rs  tests.rs  types.rs
rust/crates/compat-harness/: Cargo.toml
rust/crates/compat-harness/src/: error.rs  lib.rs  parity_audit.rs  port_manifest.rs  snapshot.rs
rust/crates/constitutional-engine/: Cargo.toml  README.md  USAGE.md
rust/crates/constitutional-engine/assets/constitutional/: compliance-rules.yaml  critique-allowlist.yaml.example  patent-law.yaml
rust/crates/constitutional-engine/src/: cache.rs  engine.rs  lib.rs  llm_analyzer.rs  loader.rs  model.rs
rust/crates/embedding/: Cargo.toml
rust/crates/embedding/src/: config.rs  global.rs  http_backend.rs  lib.rs  service.rs  vector_store.rs  vision.rs
rust/crates/intent/: Cargo.toml
rust/crates/intent/src/: classifier.rs  complexity.rs  intent_types.rs  lib.rs
rust/crates/knowledge/: Cargo.toml
rust/crates/knowledge/src/: knowledge_cards.rs  law_db.rs  lib.rs  paths.rs  search.rs  semantic_index.rs  types.rs
rust/crates/llm/: Cargo.toml
rust/crates/llm/src/: config.rs  error.rs  lib.rs  provider.rs
rust/crates/llm/src/openai/: client.rs  mod.rs  types.rs
rust/crates/mcp-bridge/: Cargo.toml
rust/crates/mcp-bridge/src/: lib.rs
rust/crates/memory/: Cargo.toml
rust/crates/memory/src/: context.rs  frontmatter.rs  hebbian.rs  lib.rs  relevance.rs  semantic.rs  store.rs  tier.rs  types.rs  unified.rs
rust/crates/model-router/: Cargo.toml
rust/crates/model-router/src/: analyzer.rs  config.rs  e2e_tests.rs  lib.rs  scorer.rs  selector.rs  types.rs
rust/crates/patent-domain/: Cargo.toml
rust/crates/patent-domain/src/: claim_parser.rs  drafting.rs  examiner_simulator.rs  guideline_graph.rs  invalid_decision.rs  kg_seed.rs  legal_reasoning.rs  lib.rs  models.rs  rule_engine.rs  sqlite_graph.rs
rust/crates/patent-domain/src/compare/: mod.rs
rust/crates/patent-domain/src/retrieval/: mod.rs
rust/crates/patent-domain/src/rules/: checks.rs  engine.rs  mod.rs  schema.rs
rust/crates/reasoning/: Cargo.toml
rust/crates/reasoning/src/: executor.rs  hypothesis.rs  lib.rs  monitor.rs  pipeline.rs
rust/crates/router/: Cargo.toml
rust/crates/router/src/: complexity.rs  config.rs  detector.rs  hebbian_hint.rs  lib.rs  types.rs  workflow_router.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: agent_protocol.rs  bash.rs  bootstrap.rs  compact.rs  config.rs  conversation.rs  env_compat.rs  event_bus.rs  execpolicy.rs  file_ops.rs  hardening.rs  hooks.rs  json.rs  lib.rs  mcp.rs  mcp_client.rs  mcp_pool.rs  mcp_reconnect.rs  mcp_remote.rs  mcp_stdio.rs  oauth.rs  permissions.rs  prompt.rs  recovery.rs  remote.rs  sandbox.rs  secrets.rs  session.rs  sse.rs  task_ledger.rs  usage.rs
rust/crates/server/: Cargo.toml
rust/crates/server/src/: agent_bridge.rs  auth.rs  case_store.rs  lib.rs  permission.rs  server.rs  session_store.rs  settings_store.rs  tests.rs  ws_stream.rs
rust/crates/server/src/routes/: cases.rs  chat.rs  health.rs  knowledge.rs  mcp.rs  memory.rs  mod.rs  permission.rs  sessions.rs  settings.rs  tools.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: agent.rs  agent_helpers.rs  agent_message.rs  agent_roles.rs  agent_team.rs  brief.rs  config_tool.rs  constitutional_check.rs  dispatch.rs  document.rs  error.rs  flow_tools.rs  handoff.rs  knowledge_tools.rs  lib.rs  notebook.rs  patent.rs  patent_compare.rs  patent_document.rs  patent_office.rs  patent_visualization.rs  repl.rs  runners.rs  shell.rs  skill.rs  system_prompt.rs  tests.rs  todo.rs  tool_exec.rs  tool_registry.rs  tool_search.rs  tool_trait.rs  web.rs
rust/crates/tools/src/code_eval/: agent_code.rs  execution.rs  mod.rs  python_eval.rs  static_analysis.rs  style.rs
rust/crates/tools/src/eval_framework/: mod.rs  pipeline.rs  registry.rs  tracing.rs
rust/crates/tools/src/llm_eval/: faithfulness.rs  g_eval.rs  mod.rs  self_consistency.rs
rust/crates/tools/src/patent_analysis/: analysis.rs  compare.rs  compare_matrix.rs  examiner.rs  invalid.rs  mod.rs  rules.rs
rust/crates/tools/src/patent_drafting/: mod.rs  (+4 more)
rust/crates/workflow/: Cargo.toml
rust/crates/workflow/src/: agent_bridge.rs  checkpoint.rs  code_exec.rs  config.rs  executor.rs  flow.rs  graph.rs  graph_executor.rs  lib.rs  orchestrator.rs  plan.rs  scheduler.rs  task.rs  types.rs
rust/crates/yunxi-cli/: Cargo.toml  DESKTOP-DEVELOPMENT-LOG.md  build.rs  bundle-desktop.sh  tauri.conf.json
rust/crates/yunxi-cli/assets/: desktop-seed-claims.md  desktop-seed-description.md  desktop-seed-drafts.md  desktop-seed-review.json
rust/crates/yunxi-cli/capabilities/: default.json
rust/crates/yunxi-cli/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
rust/crates/yunxi-cli/icons/: icon.icns
rust/crates/yunxi-cli/permissions/: desktop-commands.toml
rust/crates/yunxi-cli/src/: args.rs  cli_action.rs  cli_tests.rs  config.rs  desktop_slash.rs  doctor.rs  error.rs  format_report.rs  format_tool.rs  help_text.rs  init.rs  input.rs  kb_index.rs  lib.rs  live_cli.rs  llm_auth.rs  main.rs  mcp_runtime.rs  memory_bridge.rs  model_routing.rs  oauth_flow.rs  permission_ui.rs  render.rs  repl_stream.rs  resume_session.rs  routing.rs  runtime_bridge.rs  self_update.rs  session_meta.rs  session_mgr.rs  slash_complete_shared.rs  slash_sync.rs
rust/examples/: test_constitutional.rs
rust/reference_data/: README.md
(+453 files in other folders)
