[workspace]
members = ["crates/llm", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "云熙智能体 - 专业专利智能体 (YunXi Agent)"
license = "MIT"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
unwrap_used = { level = "warn", priority = -1 }
expect_used = { level = "warn", priority = -1 }
