[workspace]
members = ["crates/llm", "crates/patent-domain", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "云熙智能体 - 专业专利智能体 (YunXi Agent)"
license = "MIT"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
dead_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -2 }
pedantic = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
unwrap_used = { level = "allow", priority = -1 }
expect_used = { level = "allow", priority = -1 }
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
doc_markdown = "allow"
redundant_closure_for_method_calls = "allow"
match_same_arms = "allow"
needless_pass_by_value = "allow"
single_char_pattern = "allow"
bool_to_int_with_if = "allow"
option_if_let_else = "allow"
fn_to_numeric_cast_with_truncation = "allow"
return_self_not_must_use = "allow"
useless_let_if_seq = "allow"
clone_on_copy = "allow"
map_unwrap_or = "allow"
ptr_arg = "allow"
field_reassign_with_default = "allow"
items_after_statements = "allow"
needless_return = "allow"
uninlined_format_args = "allow"
doc_lazy_continuation = "allow"
derivable_impls = "allow"
if_same_then_else = "allow"
filter_map_bool_then = "allow"
format_in_format_args = "allow"
useless_vec = "allow"
too_many_arguments = "allow"
let_and_return = "allow"
unused_unit = "allow"
items_after_test_module = "allow"
useless_conversion = "allow"
vec_init_then_push = "allow"
explicit_auto_deref = "allow"
deref_addrof = "allow"
