[package]
name = "embedding"
description = "云熙智能体 - 向量嵌入与语义搜索引擎 (YunXi Embedding Engine)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
tokenizers = "0.21"
dirs = "6"
indexmap = "2"
tracing = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
