[package]
name = "knowledge"
description = "云熙智能体 - 知识库引擎 (YunXi Knowledge Engine)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
embedding = { path = "../embedding" }
patent-domain = { path = "../patent-domain" }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lints]
workspace = true
