[package]
name = "mcp-bridge"
description = "云熙智能体 - MCP 工具发现与运行时调用 (YunXi MCP Bridge)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[lints]
workspace = true
