[package]
name = "memory"
description = "云熙智能体 - 持久化记忆系统 (YunXi Memory)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
