[package]
name = "patent-domain"
description = "云熙智能体 - 专利领域模型与知识图谱引擎 (YunXi Patent Domain)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
regex = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
strsim = "0.11"
thiserror = "2"

[lints]
workspace = true
