[package]
name = "reasoning"
description = "云熙智能体 - 结构化推理引擎 (YunXi Reasoning Engine)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lints]
workspace = true
