[package]
name = "runtime"
description = "云熙智能体 - 运行时核心 (YunXi Agent Runtime)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sha2 = "0.10"
glob = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
walkdir = "2"
reqwest = { version = "^0.12", features = ["json", "stream"] }
eventsource-stream = "^0.2"
tokio-tungstenite = "^0.24"
futures-util = "^0.3"
async-trait = "^0.1"

[lints]
workspace = true
