[package]
name = "tools"
description = "云熙智能体 - 内置工具集 (YunXi Agent Tools)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
embedding = { path = "../embedding" }
knowledge = { path = "../knowledge" }
runtime = { path = "../runtime" }
constitutional-engine = { path = "../constitutional-engine" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
workflow = { path = "../workflow" }
headless_chrome = { version = "1.0", features = ["fetch"], optional = true }

[features]
browser-fallback = ["headless_chrome"]

[lints]
workspace = true
