[package]
name = "yunxi-cli"
description = "云熙智能体 - 专业专利智能体命令行工具 (YunXi Agent CLI)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "yunxi"
path = "src/main.rs"

[[bin]]
name = "yunxi-desktop"
path = "src/desktop/main.rs"
required-features = ["desktop"]

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
embedding = { path = "../embedding" }
knowledge = { path = "../knowledge" }
router = { path = "../router" }
llm = { path = "../llm" }
model-router = { path = "../model-router" }
crossterm = "0.28"
pulldown-cmark = "0.13"
ratatui = "0.29"
rustyline = "15"
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
server = { path = "../server" }
syntect = "5"
tauri = { version = "2", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tools = { path = "../tools", features = ["browser-fallback"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
desktop = ["tauri"]

[lints]
workspace = true
